fix: update calculations and improve layout in various views for better readability and consistency

--- a/public/assets/css/result_new.css
+++ b/public/assets/css/result_new.css
@@ -845,18 +845,18 @@
             }
 
             .cant_2_l{
-            font-size:2.3rem;
+            font-size:2rem;
             color:#0D124F;
             margin-left:90px;
             }
 
             .cant_2{
-            font-size:2.3rem;
+            font-size:2rem;
             color:#0D124F;
             }
 
             .capex_a{
-            font-size:2.3rem;
+            font-size:2rem;
             color:#0D124F;
             margin-left:40px;
             }
